tests/build/pass/widget_new/assign_shorthand.rs
use zero_ui::properties::margin;
use zero_ui::widgets::blank;

fn main() {
    let margin = 0;
    let _ = blank! {
        margin
    };
}
